--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -9,6 +9,11 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 33% 66%;
+  grid-template-rows: 12.5% 12.5% 62.5% 12.5%;
 }
 
 .container div {
@@ -22,22 +27,36 @@ html {
 
 .header {
   background-color: #006157;
+
+  grid-column: span 2;
 }
 
 .sidebar {
   background-color: #005B94;
+
+  grid-column: 1;
+  grid-row: 2 / 4;
 }
 
 .nav {
   background-color: #642cde;
+
+  grid-column: 2;
+  grid-row: 2;
 }
 
 .article {
   background-color: #7E1DC3;
+
+  grid-column: 2;
+  grid-row: 3;
 }
 
 .footer {
   background-color: #393f4d;
+
+  grid-column: span 2;
+  grid-row: 4;
 }
 
 .article p {
